# v-kernel

./: CORE_HIERARCHY.md  CORE_ROUTING.md  DIFFUSION_STATE_LANGUAGE_UPDATED.md  LICENSE  README.md  ROADMAP.md  THREE_REPO_FIELD_BRIDGE.md  V_KERNEL_START_HERE.md  WAVE_INTERFERENCE_MODEL.md  pyproject.toml
apps/: vkernel_scan.py
core/: __init__.py  api.py  io_encoders.py  mode_classifier.py  vkernel_engine.py
doc/: THREE_REPO_FIELD_BRIDGE_UPDATED.md
docs/: BINDU_CORE.md  CHIP_OVERVIEW.md  CONSISTENCY_CLOCK.md  CORE_SPECIALIZATION.md  CORE_SYNCHRONIZATION.md  DIFFUSION_ALPHABET.md  DIFFUSION_DEVELOPMENT_HISTORY_AFTER_ALPHABET.md  DIFFUSION_STATE_LANGUAGE.md  ENTROPY_PRUNER.md  EXECUTION_MODEL.md  FIELD_CODED_MEMORY_POSITIONING.md  FIELD_LAYER.md  FIELD_RUNTIME_BRIDGE_STATUS.md  FPGA_BRIDGE.md  INTERCONNECT.md  LAYER_MODEL.md  MANIFEST.md  MEMORY_DOMAINS.md  MULTI_CORE.md  PHASE_ISOLATION.md  PHOTONIC_MAPPING.md  PITCH.md  PRINCIPLES.md  PROGRAMMING_MODEL.md  RUNTIME_BRIDGE.md  SIMULATION.md  SPECTRAL_COHERENCE_DEVELOPMENT_AFTER_D35.md  UNIFIED_MODEL.md  USE_CASES.md  VISION.md
examples/: bare_except.py  good_code.py
notebooks/: diffusion_address_collision_test.ipynb  diffusion_and_gate.ipynb  diffusion_boot_sequence.ipynb  diffusion_boundary_split.ipynb  diffusion_checkpoint_rollback.ipynb  diffusion_consensus_memory.ipynb  diffusion_error_correction.ipynb  diffusion_field_intent_bridge.ipynb  diffusion_field_memory_decay_reinforcement.ipynb  diffusion_fractional_field_memory.ipynb  diffusion_full_io_loop.ipynb  diffusion_inhibition_gate.ipynb  diffusion_leader_follower_sync.ipynb  diffusion_memory_hold.ipynb  (+32 more)
reports/: demo_results.md  (+1 more)
(+29 files in other folders)
