[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vkernel"
version = "0.1.0"
description = "Field-based computation architecture for convergence, resonance, and stable mode selection"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Volodymyr Pozdnyak" }
]
license = { text = "MIT" }
keywords = [
  "graph-computing",
  "field-computation",
  "resonance-ai",
  "spectral-graph-theory",
  "dynamical-systems",
  "non-von-neumann"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "numpy>=1.24",
  "networkx>=3.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6.0"
]
notebooks = [
  "ipython>=8.0",
  "jupyter>=1.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I"
]
ignore = []
